# HaeerPruebas

./: Dockerfile  README.md  pyproject.toml  uso.py
mi_paquete/: __init__.py  math_operations.py  string_operations.py
mi_paquete.egg-info/: PKG-INFO  SOURCES.txt
