[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_paquete"
version = "0.1.0"
description = "Un paquete de ejemplo para operaciones matemáticas y de cadenas"
authors = [
    { name = "Anna Cabrerizo Requena", email = "annacabrerizorequena@gmail.com" }
]
dependencies = []

